# doctools

./: .dockerignore  .editorconfig  .env.dev  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.node.cjs  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc.js  .prettierrc.mjs  .stylelintrc.js  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  deno.json  deny.toml  eslint.config.js  lingui.config.js  nx.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  pyproject.toml  tsconfig.base.json  tsconfig.browser.json  tsconfig.deno.json  tsconfig.json  tsconfig.neutral.json  tsconfig.node.json  vite.config.lib.ts  vite.config.ts  (+2 more)
crates/deno-lite/: Cargo.toml  tsconfig.json
crates/deno-lite/macros/: Cargo.toml
crates/deno-lite/macros/src/: lib.rs
crates/deno-lite/src/: global_this.rs  lib.rs  utils.rs
crates/deno-lite/static/main/: index.js
crates/deno-lite/tests/: lib.rs
crates/deno-runtime-web-subset/: Cargo.toml  tsconfig.bootstrap.json
crates/deno-runtime-web-subset/src/: lib.rs
crates/deno-runtime-web-subset/static/main/: core.d.ts  ext.d.ts  index.js
crates/deno-runtime-web-subset/tests/: lib.rs
crates/esm-serve/: Cargo.toml
crates/esm-serve/src/: lib.rs  specifier.rs
crates/esm-serve/tests/: lib.rs
crates/fuzzy-sourcemap/: Cargo.toml
crates/fuzzy-sourcemap/src/: lib.rs  paragraph.rs  unicode.rs  whitespace.rs
crates/fuzzy-sourcemap/src/snapshots/: fuzzy_sourcemap__tests__empty.md.snap  fuzzy_sourcemap__tests__markdown.md.snap  fuzzy_sourcemap__tests__restructuredtext-lists-tables.rst.snap  fuzzy_sourcemap__tests__restructuredtext.rst.snap
crates/fuzzy-sourcemap/tests/: paragraph.rs
crates/fuzzy-sourcemap/tests/fixtures/: LICENSE.md  empty.md.yaml  markdown.md  markdown.md.yaml  restructuredtext.rst  restructuredtext.rst.yaml
crates/fuzzy-sourcemap/tests/snapshots/: paragraph__find_paragraph_markdown_013.snap  paragraph__find_paragraph_markdown_017.snap  paragraph__find_paragraph_markdown_031.snap  paragraph__find_paragraph_markdown_054.snap  paragraph__find_paragraph_markdown_138.snap  paragraph__find_paragraph_markdown_140.snap  paragraph__find_paragraph_markdown_182.snap  paragraph__find_paragraph_markdown_318.snap  paragraph__find_paragraph_markdown_341.snap  paragraph__find_paragraph_markdown_352.snap  paragraph__find_paragraph_markdown_374.snap  paragraph__find_paragraph_markdown_393.snap
crates/fuzzy-sourcemap/tests/utils/: mod.rs
crates/html5jsx/: Cargo.toml
crates/html5jsx/src/: element.rs  lib.rs  main.rs  props.rs  visit.rs
crates/html5jsx/tests/: lib.rs
crates/html5jsx/tests/fixtures/: empty.html.snap  empty.swc-snapshot.js  index.html  index.html.snap  index.swc-snapshot.js  jsx-factory.json  jsx-factory.swc-snapshot.js  pre-code.html  pre-code.html.snap  pre-code.swc-snapshot.js  self-closing.html.snap  self-closing.swc-snapshot.js  simple.html.snap  simple.swc-snapshot.js  styled.html  (+10 more)
crates/playground/: Cargo.toml
crates/playground/serde-jsx/: Cargo.toml  README.md
crates/playground/src/: ensure.json  main.rs
crates/swc-ecma-lint-bindings/: Cargo.toml
crates/swc-ecma-lint-bindings/src/: lib.rs
crates/swc-ecma-lint-linkcheck/: Cargo.toml
crates/swc-ecma-lint-linkcheck/src/: lib.rs
crates/swc-ecma-lint-sphinx-theme/: Cargo.toml
crates/swc-ecma-lint-sphinx-theme/src/: lib.rs
crates/swc-ecma-lint-undefined-bindings/: Cargo.toml
crates/swc-ecma-lint-undefined-bindings/src/: lib.rs
crates/swc-ecma-testing2/: Cargo.toml
crates/swc-ecma-testing2/src/: lib.rs
crates/swc-ecma-transform-i18n/: Cargo.toml  build.rs
crates/swc-ecma-transform-i18n/src/: attribute.rs  flow_content.rs  lib.rs  message.rs  phrasing_content.rs  symbols.rs
crates/swc-ecma-transform-i18n/tests/: lib.rs
crates/swc-ecma-transform-sphinx/: .eslintrc.cjs  Cargo.toml  deno.json  inline.jsx  package.json  tsconfig.json
crates/swc-ecma-transform-sphinx-code/: Cargo.toml  package.json
crates/swc-ecma-transform-sphinx-code/tests/: lib.rs
crates/swc-ecma-transform-sphinx-markups/: Cargo.toml
crates/swc-ecma-transform-sphinx-markups/src/: drop_elements.rs  lib.rs  standalone.rs
crates/swc-ecma-transform-sphinx-markups/tests/: drop_elements.rs
crates/swc-ecma-transform-sphinx-math/: Cargo.toml  package.json  tsconfig.json
crates/swc-ecma-transform-sphinx-math/scripts/: build.js
crates/swc-ecma-transform-sphinx-math/tests/: lib.rs
crates/swc-ecma-transform-sphinx/macros/: Cargo.toml
crates/swc-ecma-transform-sphinx/scripts/: build.js
crates/swc-ecma-transform-sphinx/src/: drop_elements.rs  standalone.rs
crates/swc-ecma-transform-sphinx/tests/: drop_elements.rs  lib.rs
crates/swc-ecma-transforms-i18n/: Cargo.toml
crates/swc-ecma-transforms-i18n/src/: attribute.rs  flow_content.rs  lib.rs  message.rs  phrasing_content.rs
crates/swc-ecma-transforms-i18n/tests/: lib.rs
crates/swc-ecma-transforms-lingui-auto/: Cargo.toml
crates/swc-ecma-transforms-lingui-auto/src/: lib.rs
crates/swc-ecma-utils2/: Cargo.toml
crates/swc-ecma-utils2/src/: lib.rs  span.rs
crates/swc-ecma-utils2/tests/: lib.rs
crates/swc-utils/: Cargo.toml
crates/swc-utils/src/: ast.rs  ecma.rs  json.rs  lib.rs  span.rs  testing.rs
pyprojects/esm-serve/: Cargo.toml  package.json
pyprojects/esm-serve-pyo3/: Cargo.toml  README.md  build.rs  package.json  pyproject.toml
pyprojects/esm-serve-pyo3/src/: lib.rs
pyprojects/esm-serve/src/: main.rs  rewriter.rs  specifier.rs
pyprojects/maturin-utils/: README.md  pyproject.toml
pyprojects/secretflow-doctools/: CHANGELOG.md  README.md  package.json  pyproject.toml
pyprojects/sphinx-jsx/: Cargo.toml  README.md  build.rs  package.json  pyproject.toml  tsconfig.json  tsconfig.jupyter.json  tsconfig.theme.json
pyprojects/sphinx-jsx/scripts/: prop-info.js
pyprojects/sphinx-jsx/src/: constants.rs  jsx.rs  lib.rs  testing.rs
pyprojects/sphinx-jsx/tests/: test_integrated.py
pyprojects/sphinx-mdx/: Cargo.toml  README.md  package.json  pyproject.toml
pyprojects/sphinx-mdx/src/: lib.rs
(+725 files in other folders)
