[workspace]
members = [
  "crates/esm-serve",
  "crates/html5jsx",
  "crates/html5jsx/bin",
  "crates/maturin-utils",
  "crates/playground",
  "crates/playground/serde-jsx",
  "crates/swc-ecma-transforms-lingui-auto",
  "crates/swc-utils",
  "packages/swc-plugin-esm-serve",
  "pyprojects/esm-serve-pyo3",
  "pyprojects/sphinx-jsx",
]
resolver = "2"

[profile.release]
lto = true

[profile.swc-plugin]
inherits = "release"
lto = true
opt-level = "z"
strip = "symbols"
