[workspace]
members = [
  "crates/deno-runtime-web-subset",
  "crates/esm-serve",
  "crates/html5jsx",
  "crates/html5jsx/bin",
  "crates/maturin-utils",
  "crates/playground",
  "crates/playground/serde-jsx",
  "crates/pyo3-utils",
  "crates/swc-ecma-transforms-i18n",
  "crates/swc-utils",
  "packages/swc-plugin-esm-serve",
  "pyprojects/sphinx-jsx",
]
resolver = "2"

[profile.release]
lto = true

[profile.swc-plugin]
inherits = "release"
lto = true
opt-level = "z"
strip = "symbols"
