[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = []
name = "monorepo"
readme = "README.md"
requires-python = ">=3.8.15, <3.11"
version = "0.0.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling~=1.8"]

[tool.rye.workspace]
members = ["pyprojects/*"]

[tool.rye]
dev-dependencies = [
  "black[jupyter]~=23.7",
  "docutils-stubs>=0.0.22",
  "hatch~=1.8",
  "ipython~=8.12",
  "jupyterlab~=4.0",
  "maturin~=1.4",
  "myst-parser~=2.0",
  "pip~=23.3",
  "pytest-cov~=4.1",
  "pytest~=7.4.0",
  "ruff>=0.0.284",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = []

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.black]
force-exclude = """
_pb2\\.pyi?
| _pb2_grpc\\.pyi?
"""
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]
src = ["pyprojects/*/src", "pyprojects/*/src/py"]

[tool.ruff.extend-per-file-ignores]
"*.ipynb" = ["E402", "I001", "B018"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.ipynb_checkpoints"]
include = ["pyprojects/*/src", "pyprojects/*/src/py"]
reportGeneralTypeIssues = "information"
reportOptionalMemberAccess = "information"
reportPrivateImportUsage = "information"
