[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = []
name = "monorepo"
readme = "README.md"
requires-python = ">=3.9, <3.13"
version = "0.0.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling~=1.8"]

[tool.rye.workspace]
members = ["pyprojects/*"]

[tool.rye]
dev-dependencies = [
  "black[jupyter]>=24",
  "docutils-stubs>=0.0.22",
  "ipython~=8.12",
  "maturin~=1.5", # "myst-parser~=2.0",
  "ruff>=0.0.284",
  "watchfiles>=0.21.0",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = []

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]
src = ["pyprojects/*/src", "pyprojects/*/src/py"]

[tool.ruff.extend-per-file-ignores]
"*.ipynb" = ["E402", "I001", "B018"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.ipynb_checkpoints"]
include = ["pyprojects/*/src/**/*"]
reportGeneralTypeIssues = "information"
reportIncompatibleVariableOverride = "error"
reportOptionalMemberAccess = "information"
reportPrivateImportUsage = "information"
