[project]
description = "Documentation builder for SecretFlow"
license = "Apache-2.0"
name = "secretflow-doctools"
readme = "README.md"
requires-python = ">=3.10"
version = "0.8.5"

dependencies = [
  "ansi2html~=1.9",
  "flask~=3.1",
  "loguru~=0.7",
  "more-itertools~=10.6",
  "myst-parser~=4.0",
  "pexpect~=4.9",
  "pydantic~=2.6",
  "pydantic-settings~=2.8",
  "requests~=2.32",
  "ruamel-yaml~=0.18",
  "sphinx~=8.0",
  "sphinx-intl~=2.3",
  "thefuzz~=0.22.1",
]

[dependency-groups]
dev = [
  "babel~=2.17",
  "coverage~=7.8",
  "hatch~=1.14",
  "ipykernel~=6.29",
  "logging-tree~=1.10",
  "myst-nb~=1.2",
  "pandas!=2.2",
  "ruff~=0.11",
  "sphinxcontrib-mermaid~=1.0",
  "termcolor!=3.1",
  "uv~=0.7",
  "watchfiles~=1.0",
]

[project.scripts]
secretflow-doctools = "secretflow_doctools.__main__:cli"

[[project.authors]]
email = "secretflow-contact@service.alipay.com"
name = "SecretFlow Team"

[project.urls]
Documentation = "https://github.com/secretflow/doctools/blob/main/CONTRIBUTING.md"
Issues = "https://github.com/secretflow/doctools/issues"
Repository = "https://github.com/secretflow/doctools"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
include = ["src/py", "scripts"]

[tool.hatch.build.targets.sdist.hooks.custom]
path = "scripts/sdist_build_hook.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py/secretflow_doctools"]

[tool.hatch.build.targets.custom]
packages = ["src/py/secretflow_doctools"]
path = "scripts/wheel_builder.py"

[tool.pyright]
ignore = [".venv"]
pythonVersion = "3.10"
reportDeprecated = "information"
reportIncompatibleVariableOverride = false
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "./"

[tool.ruff]
extend-exclude = ["examples"]
