[package]
edition = "2021"
license.workspace = true
name = "deno-lite"
publish = false
version = "0.0.0"

[dependencies]
_deno-lite-macros = {path = "./macros"}
deno_console = "0.135.0"
deno_core = "0.254.0"
deno_crypto = "0.149.0"
deno_url = "0.135.0"
deno_web = "0.166.0"
deno_webidl = "0.135.0"
serde = {version = "1", features = ["derive"]}
tokio = "1.35.1"
