[package]
edition = "2021"
name = "deno-runtime-web-subset"
publish = false
version = "0.0.0"

[dependencies]
built = {version = "0.7.1", features = ["dependency-tree"]}
deno_console = "=0.132.0"
deno_core = "=0.245.0"
deno_crypto = "=0.146.0"
deno_url = "=0.132.0"
deno_web = "=0.163.0"
deno_webidl = "=0.132.0"
serde = {version = "1.0.195", features = ["derive"]}

[dev-dependencies]
tempfile = "3.9.0"
tokio = "1.35.1"
