[package]
edition = "2021"
license.workspace = true
name = "esm-serve"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.77"
minijinja = {version = "1.0.11", features = ["loader"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.111"
swc_core = {version = "0.88", features = ["ecma_plugin_transform"]}
url = "2.5.0"

[dev-dependencies]
once_cell = "1.19.0"
swc_core = {version = "0.88", features = ["ecma_parser"]}
