[package]
edition = "2021"
license.workspace = true
name = "fuzzy-sourcemap"
publish = false
version = "0.0.0"

[dependencies]
log = {version = "0.4.21"}
swc_core = {version = "*", features = ["common_sourcemap", "common_concurrent"]}
thiserror = "1.0.56"

[dev-dependencies]
anyhow = "1.0.79"
env_logger = "0.11.3"
glob = "0.3.1"
insta = {version = "1.34.0", features = ["yaml"]}
miette = {version = "5.10.0", features = ["fancy"]}
once_cell = "1.19.0"
relative-path = "1.9.2"
serde = {version = "1.0.196", features = ["derive"]}
serde_yaml = "0.9.31"
swc_core = {version = "*", features = ["testing", "ecma_ast", "ecma_codegen"]}
thiserror = "1.0.56"
