[package]
edition = "2021"
name = "playground"
publish = false
version = "0.0.0"

[dependencies]
pyo3 = "0.20.2"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
swc-utils = { version = "0.0.0", path = "../swc-utils" }
swc_core = { version = "0.88.1", features = ["ecma_ast", "ecma_ast_serde", "ecma_utils"] }
swc_xml_ast = "0.12.13"
swc_xml_parser = "0.13.15"
swc_xml_visit = "0.12.13"
