[package]
edition = "2021"
license.workspace = true
name = "playground"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.79"
miette = {version = "5.10.0", features = ["fancy"]}
num-bigint = {version = "0.4.4", features = ["serde"]}
once_cell = "1"
serde = {version = "1", features = ["derive"]}
thiserror = "1.0.56"

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_ast_serde",
  "ecma_parser",
  "ecma_visit",
  "ecma_utils",
  "ecma_codegen",
  "testing",
  "testing_transform",
]
version = "*"
