[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-lint-bindings"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.79"
swc-ecma-testing2 = {path = "../swc-ecma-testing2"}
swc-ecma-utils2 = {path = "../swc-ecma-utils2"}
swc_core = {version = "*", features = ["ecma_parser", "ecma_visit", "ecma_ast", "ecma_parser_typescript"]}
