[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-lint-sphinx-theme"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.79"
swc-ecma-utils = {path = "../swc-ecma-utils"}
swc_core = {version = "*", features = ["ecma_parser", "ecma_visit", "ecma_ast", "ecma_parser_typescript"]}
