[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-testing2"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.79"
insta = {version = "1.34.0", features = ["serde"]}
pretty_assertions = "1.4.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.113"
swc_error_reporters = "*"
thiserror = "1.0.56"

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_utils",
  "ecma_visit",
  "testing",
]
version = "*"
