[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-transform-i18n"
publish = false
version = "0.0.0"

[dependencies]
base64 = "0.21.7"
indexmap = "2.1.0"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
sha2 = "0.10.8"
swc-ecma-utils2 = {path = "../swc-ecma-utils2"}
tracing = "0.1.40"

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
]
version = "*"

[dev-dependencies]
swc-ecma-testing2 = {path = "../swc-ecma-testing2"}

[dev-dependencies.swc_core]
features = ["testing"]
version = "*"
