[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-transform-sphinx-code"
version = "0.0.0"

[lib]
path = "src/rs/lib.rs"

[dependencies]
deno-lite = {path = "../deno-lite"}
html5jsx = {path = "../html5jsx"}
serde = {version = "1.0.196", features = ["derive"]}
sphinx-jsx-macros = {path = "../sphinx-jsx-macros"}
swc-ecma-utils2 = {path = "../swc-ecma-utils2"}

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
]
version = "*"

[dev-dependencies]
swc-ecma-testing2 = {path = "../swc-ecma-testing2"}

[dev-dependencies.swc_core]
features = [
  "testing_transform",
]
version = "*"
