[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-transform-sphinx-markups"
publish = false
version = "0.0.0"

[dependencies]
itertools = "0.12.0"
serde = {version = "1.0.195", features = ["derive"]}
swc-ecma-utils2 = {path = "../swc-ecma-utils2"}

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
]
version = "*"

[dev-dependencies]
swc-ecma-testing2 = {path = "../swc-ecma-testing2"}
swc_core = {version = "*", features = ["testing_transform"]}
