[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-transform-sphinx"
publish = false
version = "0.0.0"

[dependencies]
itertools = "0.12.0"
serde = {version = "1.0.195", features = ["derive"]}
swc-ecma-utils = {path = "../swc-ecma-utils"}

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
]
version = "0.88"

[dev-dependencies]
swc_core = {version = "0.88", features = ["testing", "testing_transform"]}
