[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-transform-sphinx"
version = "0.0.0"

[lib]
path = "src/rs/lib.rs"

[dependencies]
_swc-ecma-transform-sphinx-macros = {path = "./macros"}
deno-lite = {path = "../deno-lite"}
html5jsx = {path = "../html5jsx"}
serde = {version = "1.0.196", features = ["derive"]}
swc-ecma-utils2 = {path = "../swc-ecma-utils2"}

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
]
version = "*"

[dev-dependencies]
swc-ecma-testing2 = {path = "../swc-ecma-testing2"}

[dev-dependencies.swc_core]
features = [
  "testing_transform",
]
version = "*"
