[package]
edition = "2021"
name = "swc-ecma-transforms-i18n"
version = "0.1.0"

[dependencies]
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
swc-utils = {version = "0.1.0", path = "../swc-utils"}
tracing = "0.1.40"

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
  "trace_macro",
]
version = "0.87.21"

[dev-dependencies]
base64 = "0.21.7"
html5jsx = {version = "0.1.0", path = "../html5jsx"}
tracing-subscriber = "0.3.18"

[dev-dependencies.swc_core]
features = [
  "ecma_codegen",
  "ecma_parser",
  "testing",
  "common_sourcemap",
]
version = "0.87.21"
