[package]
edition = "2021"
license.workspace = true
name = "swc-ecma-transforms-i18n"
publish = false
version = "0.0.0"

[dependencies]
base64 = "0.21.7"
indexmap = "2.1.0"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
sha2 = "0.10.8"
swc-ecma-utils = {version = "0.0.0", path = "../swc-ecma-utils"}
tracing = "0.1.40"

[dependencies.swc_core]
features = [
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
]
version = "0.88"

[dev-dependencies.swc_core]
features = [
  "ecma_codegen",
  "ecma_parser",
  "testing",
  "common_sourcemap",
]
version = "0.88"
