[package]
edition = "2021"
name = "swc-utils"
version = "0.1.0"

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.111"
swc_core = {version = "0.87.21", features = ["ecma_ast", "ecma_visit", "ecma_utils", "ecma_codegen"]}

[dev-dependencies]
swc_core = {version = "0.87.21", features = ["ecma_ast_serde", "testing"]}
