[package]
edition = "2021"
license.workspace = true
name = "swc-utils"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1.0.79"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.111"
swc_core = {version = "0.88", features = ["ecma_ast", "ecma_parser", "ecma_visit", "ecma_utils", "ecma_codegen"]}
swc_error_reporters = "0.17.13"
thiserror = "1.0.56"

[dev-dependencies]
serde_json = {version = "1.0.111", features = ["preserve_order"]}
swc_core = {version = "0.88", features = ["ecma_ast_serde", "testing"]}
