[package]
build = "build.rs"
edition = "2021"
license = "MIT"
name = "esm-serve-pyo3"
readme = "README.md"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "esm_serve"

[dependencies]
esm-serve = {version = "0.1.0", path = "../../crates/esm-serve"}
pyo3 = "0.20.0"

[dev-dependencies]

[build-dependencies]
maturin-utils = {path = "../../crates/maturin-utils"}
