[project]
authors = [
  {name = "Tony Wu", email = "tonywu6@protonmail.com"},
]
dependencies = []
description = "Rewrite ES module imports"
name = "esm-serve"
readme = "README.md"
requires-python = ">=3.8.15, <3.11"
version = "0.0.0"

[build-system]
build-backend = "maturin"
requires = ["maturin~=1.4"]

[tool.rye]
dev-dependencies = []

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.ipynb_checkpoints"]
include = ["src/**/*"]
reportGeneralTypeIssues = "information"
reportIncompatibleVariableOverride = "error"
reportOptionalMemberAccess = "information"
reportPrivateImportUsage = "information"
venv = ".venv"
venvPath = "../.."

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "esm_serve._lib"
python-source = "src/py"
