[project]
authors = [
  {name = "Tony Wu", email = "tonywu6@protonmail.com"},
]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "watchfiles>=0.21.0",
  "click>=8.1.7",
]
name = "maturin-utils"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[project.scripts]
maturin-utils = "maturin_utils:maturin_utils"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/maturin_utils"]
