[package]
build = "build.rs"
edition = "2021"
license.workspace = true
name = "sphinx-jsx"
publish = false
readme = "README.md"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "sphinx_jsx"
path = "src/rs/lib.rs"

[dependencies]
deno-lite = {path = "../../crates/deno-lite"}
fuzzy-sourcemap = {path = "../../crates/fuzzy-sourcemap"}
indexmap = "2.1.0"
pyo3 = {version = "0.20.0", features = ["indexmap"]}
serde = {version = "1.0.195", features = ["derive"]}
serde_json = {version = "1.0.111", features = ["preserve_order"]}
swc-ecma-utils2 = {path = "../../crates/swc-ecma-utils2"}
url = "2.5.0"

[dependencies.swc_core]
features = ["common_concurrent"]
version = "*"

[build-dependencies]
anyhow = "1.0.79"
pyo3-build-utils = {path = "../../crates/pyo3-build-utils"}

[dev-dependencies]
maturin = "1.4.0"
