[project]
authors = [
  {name = "Tony Wu", email = "tonywu6@protonmail.com"},
]
dependencies = [
  "loguru>=0.7.2",
  "orjson>=3.10.0",
  "pydantic>=2.7.0",
]
description = "JSX builder for Sphinx"
# name = "sphinx-jsx"
name = "secretflow-doctools"
readme = "README.md"
requires-python = ">=3.9, <3.13"
version = "0.0.0"

[build-system]
build-backend = "maturin"
requires = ["maturin~=1.4"]

[tool.rye]
dev-dependencies = [
  "sphinx>=7.2.6",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.ipynb_checkpoints"]
include = ["src/**/*"]
reportGeneralTypeIssues = "information"
reportIncompatibleVariableOverride = "error"
reportOptionalMemberAccess = "information"
reportPrivateImportUsage = "information"
venv = ".venv"
venvPath = "../.."

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sphinx_jsx._lib"
python-source = "src/py"
